# walle

./: CMakeLists.txt  README.md  config.h.in
examples/dontblink/: blink.sh
gperf/: property.gperf  subcmd.gperf
include/: bspwm.h  gl.h  gperf.h  log.h  util.h  window.h
scripts/: gperf.sh  shader_compile.sh
shaders/: fragment.glsl  vertex.glsl
src/: bspwm.c  gl.c  main.c  util.c  window.c
